@@ -15,8 +15,11 @@ lbdb (0.28) unstable; urgency=low
     - cleaned pod section to comply better with the pod formatting standard
     - change contact address
     - fixed typos
+  * m_palm: Use only "email" entries as e-mail addresses and not
+    everything including "@".  Thanks to Nikolaus Rath <Nikolaus@rath.org>
+    for providing the patch (Closes: #196888).
 
- --
+ -- Roland Rosenfeld <roland@debian.org>  Tue,  9 Sep 2003 19:47:30 +0200
 
 lbdb (0.27) unstable; urgency=low
 
